--- a/kf.ipynb
+++ b/kf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "[(u + 1)**2*(v + 1)**2, v**2*(u + 1)**2, (u + 1)**2*(v - 1)**2, u**2*(v + 1)**2, u**2*v**2, u**2*(v - 1)**2, (u - 1)**2*(v + 1)**2, v**2*(u - 1)**2, (u - 1)**2*(v - 1)**2]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "[     u*v*(u*v + u + v + 1)/4,  u*(2*u*v + u + 2*v + 1)/4,  u*(u + 1)/4,  v*(2*u*v + 2*u + v + 1)/4, u*v + u/2 + v/2 + 1/4, u/2 + 1/4,  v*(v + 1)/4, v/2 + 1/4,  1/4]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "[0, 0, 0, 0, 0, 0, 0, 0, 1]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "[f0*(u + 1)**2*(v + 1)**2 + f1*v**2*(u + 1)**2 + f2*(u + 1)**2*(v - 1)**2 + f3*u**2*(v + 1)**2 + f4*u**2*v**2 + f5*u**2*(v - 1)**2 + f6*(u - 1)**2*(v + 1)**2 + f7*v**2*(u - 1)**2 + f8*(u - 1)**2*(v - 1)**2]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,6 +205,113 @@
     "f0, f1, f2, f3, f4, f5, f6, f7, f8 = symbols('f0, f1, f2, f3, f4, f5, f6, f7, f8')\n",
     "k = mat*Matrix([f0, f1, f2, f3, f4, f5, f6, f7, f8])\n",
     "k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\rho\\\\0\\\\\\rho c_{s}^{2}\\\\0\\\\0\\\\0\\\\\\rho c_{s}^{2}\\\\0\\\\\\rho c_{s}^{4}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[       \\rho],\n",
+       "[          0],\n",
+       "[\\rho*c_s**2],\n",
+       "[          0],\n",
+       "[          0],\n",
+       "[          0],\n",
+       "[\\rho*c_s**2],\n",
+       "[          0],\n",
+       "[\\rho*c_s**4]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rho, cs = symbols(r'\\rho c_s')\n",
+    "k00eq = rho\n",
+    "k10eq = 0\n",
+    "k01eq = 0\n",
+    "k20eq = rho*cs**2\n",
+    "k02eq = rho*cs**2\n",
+    "k11eq = 0\n",
+    "k21eq = 0\n",
+    "k12eq = 0\n",
+    "k22eq = rho*cs**4\n",
+    "keq = Matrix([k00eq, k01eq, k02eq, k10eq, k11eq, k12eq, k20eq, k21eq, k22eq])\n",
+    "keq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\frac{\\rho \\left(9 u v \\left(u v - u - v + 1\\right) + 3 u \\left(u - 1\\right) + 3 v \\left(v - 1\\right) + 1\\right)}{36}\\\\- \\frac{\\rho \\left(3 u \\left(u - 1\\right) + 9 u \\left(u v^{2} - u - v^{2} + 1\\right) + 3 v^{2} - 2\\right)}{18}\\\\\\frac{\\rho \\left(9 u v \\left(u v + u - v - 1\\right) + 3 u \\left(u - 1\\right) + 3 v \\left(v + 1\\right) + 1\\right)}{36}\\\\- \\frac{\\rho \\left(3 u^{2} + 3 v \\left(v - 1\\right) + 9 v \\left(u^{2} v - u^{2} - v + 1\\right) - 2\\right)}{18}\\\\\\frac{\\rho \\left(9 u^{2} v^{2} - 6 u^{2} - 6 v^{2} + 4\\right)}{9}\\\\- \\frac{\\rho \\left(3 u^{2} + 3 v \\left(v + 1\\right) + 9 v \\left(u^{2} v + u^{2} - v - 1\\right) - 2\\right)}{18}\\\\\\frac{\\rho \\left(9 u v \\left(u v - u + v - 1\\right) + 3 u \\left(u + 1\\right) + 3 v \\left(v - 1\\right) + 1\\right)}{36}\\\\- \\frac{\\rho \\left(3 u \\left(u + 1\\right) + 9 u \\left(u v^{2} - u + v^{2} - 1\\right) + 3 v^{2} - 2\\right)}{18}\\\\\\frac{\\rho \\left(9 u v \\left(u v + u + v + 1\\right) + 3 u \\left(u + 1\\right) + 3 v \\left(v + 1\\right) + 1\\right)}{36}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[\\rho*(9*u*v*(u*v - u - v + 1) + 3*u*(u - 1) + 3*v*(v - 1) + 1)/36],\n",
+       "[-\\rho*(3*u*(u - 1) + 9*u*(u*v**2 - u - v**2 + 1) + 3*v**2 - 2)/18],\n",
+       "[\\rho*(9*u*v*(u*v + u - v - 1) + 3*u*(u - 1) + 3*v*(v + 1) + 1)/36],\n",
+       "[-\\rho*(3*u**2 + 3*v*(v - 1) + 9*v*(u**2*v - u**2 - v + 1) - 2)/18],\n",
+       "[                       \\rho*(9*u**2*v**2 - 6*u**2 - 6*v**2 + 4)/9],\n",
+       "[-\\rho*(3*u**2 + 3*v*(v + 1) + 9*v*(u**2*v + u**2 - v - 1) - 2)/18],\n",
+       "[\\rho*(9*u*v*(u*v - u + v - 1) + 3*u*(u + 1) + 3*v*(v - 1) + 1)/36],\n",
+       "[-\\rho*(3*u*(u + 1) + 9*u*(u*v**2 - u + v**2 - 1) + 3*v**2 - 2)/18],\n",
+       "[\\rho*(9*u*v*(u*v + u + v + 1) + 3*u*(u + 1) + 3*v*(v + 1) + 1)/36]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feq = simplify(mat_i*keq)\n",
+    "simplify(feq.subs(cs, 1/sqrt(3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\rho\\\\\\rho u\\\\\\rho v\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[  \\rho],\n",
+       "[\\rho*u],\n",
+       "[\\rho*v]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ve = Matrix([\n",
+    "    [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+    "    [-1, -1, -1, 0, 0, 0, 1, 1, 1],\n",
+    "    [-1, 0, 1, -1, 0, 1, -1, 0, 1]\n",
+    "])\n",
+    "expand(ve*feq)"
    ]
   },
   {
