adjust outflow BC

--- a/moment_transform.ipynb
+++ b/moment_transform.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,42 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.  ,  0.  ,  0.  ,  0.  ,  0.25, -0.25,  0.  , -0.25,  0.25],\n",
-       "       [ 0.  ,  0.  ,  0.  , -0.5 ,  0.  ,  0.5 ,  0.5 ,  0.  , -0.5 ],\n",
-       "       [ 0.  ,  0.  ,  0.  ,  0.  , -0.25, -0.25,  0.  ,  0.25,  0.25],\n",
-       "       [ 0.  , -0.5 ,  0.5 ,  0.  ,  0.  ,  0.  ,  0.  ,  0.5 , -0.5 ],\n",
-       "       [ 1.  ,  0.  , -1.  ,  0.  ,  0.  ,  0.  , -1.  ,  0.  ,  1.  ],\n",
-       "       [ 0.  ,  0.5 ,  0.5 ,  0.  ,  0.  ,  0.  ,  0.  , -0.5 , -0.5 ],\n",
-       "       [ 0.  ,  0.  ,  0.  ,  0.  , -0.25,  0.25,  0.  , -0.25,  0.25],\n",
-       "       [ 0.  ,  0.  ,  0.  ,  0.5 ,  0.  , -0.5 ,  0.5 ,  0.  , -0.5 ],\n",
-       "       [ 0.  ,  0.  ,  0.  ,  0.  ,  0.25,  0.25,  0.  ,  0.25,  0.25]])"
-      ]
-     },
-     "execution_count": 188,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "M = np.zeros((9,9), dtype=int)\n",
-    "for a in range(3):\n",
-    "    for b in range(3):\n",
-    "        for i in {-1,0,1}:\n",
-    "            for j in {-1,0,1}:\n",
-    "                M[oid(a,b),fid(i,j)] = (i**a)*(j**b)\n",
-    "Mi = np.linalg.inv(M)\n",
-    "Mi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -100,18 +65,81 @@
        "       [ 1,  0,  1,  0,  0,  0,  1,  0,  1]])"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "M = np.zeros((9,9), dtype=int)\n",
+    "for a in range(3):\n",
+    "    for b in range(3):\n",
+    "        for i in {-1,0,1}:\n",
+    "            for j in {-1,0,1}:\n",
+    "                M[oid(a,b),fid(i,j)] = (i**a)*(j**b)\n",
     "M"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.  ,  0.  ,  0.  ,  0.  ,  0.25, -0.25,  0.  , -0.25,  0.25],\n",
+       "       [ 0.  ,  0.  ,  0.  , -0.5 ,  0.  ,  0.5 ,  0.5 ,  0.  , -0.5 ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  0.  , -0.25, -0.25,  0.  ,  0.25,  0.25],\n",
+       "       [ 0.  , -0.5 ,  0.5 ,  0.  ,  0.  ,  0.  ,  0.  ,  0.5 , -0.5 ],\n",
+       "       [ 1.  ,  0.  , -1.  ,  0.  ,  0.  ,  0.  , -1.  ,  0.  ,  1.  ],\n",
+       "       [ 0.  ,  0.5 ,  0.5 ,  0.  ,  0.  ,  0.  ,  0.  , -0.5 , -0.5 ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  0.  , -0.25,  0.25,  0.  , -0.25,  0.25],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  0.5 ,  0.  , -0.5 ,  0.5 ,  0.  , -0.5 ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  0.  ,  0.25,  0.25,  0.  ,  0.25,  0.25]])"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Mi = np.linalg.inv(M)\n",
+    "Mi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 1., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 1., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 1., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Mi@M"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +155,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,78 +166,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/* Not supported in C: */\n",
+      "/* ImmutableDenseNDimArray */\n",
+      "[0.25*(m[4] - m[5] - m[7] + m[8]), -0.5*(m[3] - m[5] - m[6] + m[8]), -0.25*(m[4] + m[5] - m[7] - m[8]), -0.5*(m[1] - m[2] - m[7] + m[8]), 1.0*(m[0] - m[2] - m[6] + m[8]), 0.5*(m[1] + m[2] - m[7] - m[8]), -0.25*(m[4] - m[5] + m[7] - m[8]), 0.5*(m[3] - m[5] + m[6] - m[8]), 0.25*(m[4] + m[5] + m[7] + m[8])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sp.print_ccode(sp.factor(Mi@m))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = np.ndarray(9, dtype=object)\n",
+    "for i in range(9):\n",
+    "    k[i] = sp.Symbol(f'k[{i}]')\n",
+    "u, v = sp.symbols('u v')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.25*m[4] - 0.25*m[5] - 0.25*m[7] + 0.25*m[8],\n",
-       "       -0.5*m[3] + 0.5*m[5] + 0.5*m[6] - 0.5*m[8],\n",
-       "       -0.25*m[4] - 0.25*m[5] + 0.25*m[7] + 0.25*m[8],\n",
-       "       -0.5*m[1] + 0.5*m[2] + 0.5*m[7] - 0.5*m[8],\n",
-       "       1.0*m[0] - 1.0*m[2] - 1.0*m[6] + 1.0*m[8],\n",
-       "       0.5*m[1] + 0.5*m[2] - 0.5*m[7] - 0.5*m[8],\n",
-       "       -0.25*m[4] + 0.25*m[5] - 0.25*m[7] + 0.25*m[8],\n",
-       "       0.5*m[3] - 0.5*m[5] + 0.5*m[6] - 0.5*m[8],\n",
-       "       0.25*m[4] + 0.25*m[5] + 0.25*m[7] + 0.25*m[8]], dtype=object)"
+       "array([[1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [-v, 1, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [v**2, -2*v, 1, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 1, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, -v, 1, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, v**2, -2*v, 1, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 1, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, -v, 1, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, v**2, -2*v, 1]], dtype=object)"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Mi@m"
+    "K_ = np.ndarray((9,9), dtype=object)\n",
+    "for a in range(3):\n",
+    "    for b in range(3):\n",
+    "        for i in range(3):\n",
+    "            for j in range(3):\n",
+    "                if i != a:\n",
+    "                    K_[oid(a,b), oid(i,j)] = 0\n",
+    "                else:\n",
+    "                    K_[oid(a,b), oid(i,j)] = math.comb(b,j)*(-v)**(b-j)\n",
+    "\n",
+    "K_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([m[0], -m[0]*v + m[1], m[0]*v**2 - 2*m[1]*v + m[2], -m[0]*u + m[3],\n",
-       "       -m[3]*v + m[4] - u*(-m[0]*v + m[1]),\n",
+       "       -m[3]*v + m[4] + u*(m[0]*v - m[1]),\n",
        "       m[3]*v**2 - 2*m[4]*v + m[5] - u*(m[0]*v**2 - 2*m[1]*v + m[2]),\n",
        "       m[0]*u**2 - 2*m[3]*u + m[6],\n",
-       "       -m[6]*v + m[7] + u**2*(-m[0]*v + m[1]) - 2*u*(-m[3]*v + m[4]),\n",
+       "       -m[6]*v + m[7] + u**2*(-m[0]*v + m[1]) + 2*u*(m[3]*v - m[4]),\n",
        "       m[6]*v**2 - 2*m[7]*v + m[8] + u**2*(m[0]*v**2 - 2*m[1]*v + m[2]) - 2*u*(m[3]*v**2 - 2*m[4]*v + m[5])],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "k = np.ndarray(9, dtype=object)\n",
-    "for i in range(9):\n",
-    "    k[i] = sp.Symbol(f'k[{i}]')\n",
-    "kt = np.ndarray(9, dtype=object)\n",
-    "u, v = sp.symbols('u v')\n",
+    "K = np.ndarray((9,9), dtype=object)\n",
     "for a in range(3):\n",
-    "    for beta in range(3):\n",
-    "        sum = 0\n",
-    "        for b in range(beta+1):\n",
-    "            sum += math.comb(beta, b)*(-v)**(beta - b)*m[oid(a,b)]\n",
-    "        kt[oid(a,beta)] = sum\n",
-    "for alpha in range(3):\n",
-    "    for beta in range(3):\n",
-    "        sum = 0\n",
-    "        for a in range(alpha+1):\n",
-    "            sum += math.comb(alpha, a)*(-u)**(alpha - a)*kt[oid(a,beta)]\n",
-    "        k[oid(alpha,beta)] = sum\n",
-    "k\n"
+    "    for b in range(3):\n",
+    "        for i in range(3):\n",
+    "            for j in range(3):\n",
+    "                if j != b:\n",
+    "                    K[oid(a,b), oid(i,j)] = 0\n",
+    "                else:\n",
+    "                    K[oid(a,b), oid(i,j)] = math.comb(a,i)*(-u)**(a-i)\n",
+    "\n",
+    "tmp = K@K_@m\n",
+    "for i in range(9):\n",
+    "    tmp[i] = sp.simplify(sp.collect(sp.collect(tmp[i], u), v))\n",
+    "tmp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L_ = np.ndarray((9,9), dtype=object)\n",
+    "for a in range(3):\n",
+    "    for b in range(3):\n",
+    "        for i in range(3):\n",
+    "            for j in range(3):\n",
+    "                if i != a:\n",
+    "                    L_[oid(a,b), oid(i,j)] = 0\n",
+    "                else:\n",
+    "                    L_[oid(a,b), oid(i,j)] = math.comb(b,j)*(v)**(b-j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -224,54 +306,46 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "k_ = np.ndarray(9, dtype=object)\n",
-    "for i in range(9):\n",
-    "    k_[i] = sp.Symbol(f'k[{i}]')\n",
-    "mt_ = np.ndarray(9, dtype=object)\n",
-    "m_ = np.ndarray(9, dtype=object)\n",
+    "L = np.ndarray((9,9), dtype=object)\n",
     "for a in range(3):\n",
-    "    for beta in range(3):\n",
-    "        sum = 0\n",
-    "        for b in range(beta+1):\n",
-    "            sum += math.comb(beta, b)*(v)**(beta - b)*k_[oid(a,b)]\n",
-    "        mt_[oid(a,beta)] = sum\n",
-    "for alpha in range(3):\n",
-    "    for beta in range(3):\n",
-    "        sum = 0\n",
-    "        for a in range(alpha+1):\n",
-    "            sum += math.comb(alpha, a)*(u)**(alpha - a)*mt_[oid(a,beta)]\n",
-    "        m_[oid(alpha,beta)] = sum\n",
+    "    for b in range(3):\n",
+    "        for i in range(3):\n",
+    "            for j in range(3):\n",
+    "                if j != b:\n",
+    "                    L[oid(a,b), oid(i,j)] = 0\n",
+    "                else:\n",
+    "                    L[oid(a,b), oid(i,j)] = math.comb(a,i)*(u)**(a-i)\n",
     "\n",
-    "m_"
+    "tmp = L@L_@k\n",
+    "for i in range(9):\n",
+    "    tmp[i] = sp.simplify(sp.collect(sp.collect(tmp[i], u), v))\n",
+    "tmp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}k[0] & k[0] v + k[1] & k[0] v^{2} + 2 k[1] v + k[2] & k[0] u + k[3] & k[3] v + k[4] + u \\left(k[0] v + k[1]\\right) & k[3] v^{2} + 2 k[4] v + k[5] + u \\left(k[0] v^{2} + 2 k[1] v + k[2]\\right) & k[0] u^{2} + 2 k[3] u + k[6] & k[6] v + k[7] + u^{2} \\left(k[0] v + k[1]\\right) + 2 u \\left(k[3] v + k[4]\\right) & k[6] v^{2} + 2 k[7] v + k[8] + u^{2} \\left(k[0] v^{2} + 2 k[1] v + k[2]\\right) + 2 u \\left(k[3] v^{2} + 2 k[4] v + k[5]\\right)\\end{matrix}\\right]$"
-      ],
       "text/plain": [
-       "[k[0], k[0]*v + k[1], k[0]*v**2 + 2*k[1]*v + k[2], k[0]*u + k[3], k[3]*v + k[4] + u*(k[0]*v + k[1]), k[3]*v**2 + 2*k[4]*v + k[5] + u*(k[0]*v**2 + 2*k[1]*v + k[2]), k[0]*u**2 + 2*k[3]*u + k[6], k[6]*v + k[7] + u**2*(k[0]*v + k[1]) + 2*u*(k[3]*v + k[4]), k[6]*v**2 + 2*k[7]*v + k[8] + u**2*(k[0]*v**2 + 2*k[1]*v + k[2]) + 2*u*(k[3]*v**2 + 2*k[4]*v + k[5])]"
+       "array([m[0], m[1], m[2], m[3], m[4], m[5], m[6], m[7], m[8]], dtype=object)"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sp.simplify(m_)"
+    "L@L_@K@K_@m"
    ]
   },
   {
