--- a/moment_transform.ipynb
+++ b/moment_transform.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "       [ 1,  0,  1,  0,  0,  0,  1,  0,  1]])"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
        "       [ 0.  ,  0.  ,  0.  ,  0.  ,  0.25,  0.25,  0.  ,  0.25,  0.25]])"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "       [0., 0., 0., 0., 0., 0., 0., 0., 1.]])"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "       [0, 0, 0, 0, 0, 0, v**2, -2*v, 1]], dtype=object)"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -339,13 +339,38 @@
        "array([m[0], m[1], m[2], m[3], m[4], m[5], m[6], m[7], m[8]], dtype=object)"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "L@L_@K@K_@m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\mathtt{\\text{[[ 0.    0.    0.    0.    0.25 -0.25  0.   -0.25  0.25]\n",
+      " [ 0.    0.    0.   -0.5   0.    0.5   0.5   0.   -0.5 ]\n",
+      " [ 0.    0.    0.    0.   -0.25 -0.25  0.    0.25  0.25]\n",
+      " [ 0.   -0.5   0.5   0.    0.    0.    0.    0.5  -0.5 ]\n",
+      " [ 1.    0.   -1.    0.    0.    0.   -1.    0.    1.  ]\n",
+      " [ 0.    0.5   0.5   0.    0.    0.    0.   -0.5  -0.5 ]\n",
+      " [ 0.    0.    0.    0.   -0.25  0.25  0.   -0.25  0.25]\n",
+      " [ 0.    0.    0.    0.5   0.   -0.5   0.5   0.   -0.5 ]\n",
+      " [ 0.    0.    0.    0.    0.25  0.25  0.    0.25  0.25]]}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "sp.print_latex(Mi)"
    ]
   },
   {
