add formatting settings

--- a/3d/test.ipynb
+++ b/3d/test.ipynb
@@ -193,7 +193,7 @@
        "</table>"
       ],
       "text/plain": [
-       "<lbmpy.methods.cumulantbased.cumulantbasedmethod.CumulantBasedLbMethod at 0x703cf37975f0>"
+       "<lbmpy.methods.cumulantbased.cumulantbasedmethod.CumulantBasedLbMethod at 0x75de28563e60>"
       ]
      },
      "execution_count": 2,
