--- a/3d/cavity/code-generate.ipynb
+++ b/3d/cavity/code-generate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 193,
    "id": "bf96a9ec",
    "metadata": {},
    "outputs": [],
@@ -25,13 +25,15 @@
     "    return f'_{i}{j}{k}'\n",
     "\n",
     "def pdf2str(i,j,k):\n",
-    "    name = 'orl'\n",
-    "    return f'_{name[i]}{name[j]}{name[k]}'"
+    "    namex = 'orl'\n",
+    "    namey = 'orl'\n",
+    "    namez = 'orl'\n",
+    "    return f'_{namex[i]}{namey[j]}{namez[k]}'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 194,
    "id": "168b8e53",
    "metadata": {},
    "outputs": [
@@ -39,44 +41,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "const Int _lll = 0;\n",
-      "const Int _llo = 1;\n",
-      "const Int _llr = 2;\n",
-      "const Int _lol = 3;\n",
-      "const Int _loo = 4;\n",
-      "const Int _lor = 5;\n",
-      "const Int _lrl = 6;\n",
-      "const Int _lro = 7;\n",
-      "const Int _lrr = 8;\n",
-      "const Int _oll = 9;\n",
-      "const Int _olo = 10;\n",
-      "const Int _olr = 11;\n",
-      "const Int _ool = 12;\n",
-      "const Int _ooo = 13;\n",
-      "const Int _oor = 14;\n",
-      "const Int _orl = 15;\n",
-      "const Int _oro = 16;\n",
-      "const Int _orr = 17;\n",
-      "const Int _rll = 18;\n",
-      "const Int _rlo = 19;\n",
-      "const Int _rlr = 20;\n",
-      "const Int _rol = 21;\n",
-      "const Int _roo = 22;\n",
-      "const Int _ror = 23;\n",
-      "const Int _rrl = 24;\n",
-      "const Int _rro = 25;\n",
-      "const Int _rrr = 26;\n"
+      "const int _lll = 0;\n",
+      "const int _llo = 1;\n",
+      "const int _llr = 2;\n",
+      "const int _lol = 3;\n",
+      "const int _loo = 4;\n",
+      "const int _lor = 5;\n",
+      "const int _lrl = 6;\n",
+      "const int _lro = 7;\n",
+      "const int _lrr = 8;\n",
+      "const int _oll = 9;\n",
+      "const int _olo = 10;\n",
+      "const int _olr = 11;\n",
+      "const int _ool = 12;\n",
+      "const int _ooo = 13;\n",
+      "const int _oor = 14;\n",
+      "const int _orl = 15;\n",
+      "const int _oro = 16;\n",
+      "const int _orr = 17;\n",
+      "const int _rll = 18;\n",
+      "const int _rlo = 19;\n",
+      "const int _rlr = 20;\n",
+      "const int _rol = 21;\n",
+      "const int _roo = 22;\n",
+      "const int _ror = 23;\n",
+      "const int _rrl = 24;\n",
+      "const int _rro = 25;\n",
+      "const int _rrr = 26;\n"
      ]
     }
    ],
    "source": [
     "for a,b,c in it.product(range(-1,2), repeat=3):\n",
-    "    print(f'const Int {pdf2str(a,b,c)} = {pdf(a,b,c)};')"
+    "    print(f'const int {pdf2str(a,b,c)} = {pdf(a,b,c)};')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 195,
    "id": "dbae9375",
    "metadata": {},
    "outputs": [
@@ -84,44 +86,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "const Int _000 = 0;\n",
-      "const Int _001 = 1;\n",
-      "const Int _002 = 2;\n",
-      "const Int _010 = 3;\n",
-      "const Int _011 = 4;\n",
-      "const Int _012 = 5;\n",
-      "const Int _020 = 6;\n",
-      "const Int _021 = 7;\n",
-      "const Int _022 = 8;\n",
-      "const Int _100 = 9;\n",
-      "const Int _101 = 10;\n",
-      "const Int _102 = 11;\n",
-      "const Int _110 = 12;\n",
-      "const Int _111 = 13;\n",
-      "const Int _112 = 14;\n",
-      "const Int _120 = 15;\n",
-      "const Int _121 = 16;\n",
-      "const Int _122 = 17;\n",
-      "const Int _200 = 18;\n",
-      "const Int _201 = 19;\n",
-      "const Int _202 = 20;\n",
-      "const Int _210 = 21;\n",
-      "const Int _211 = 22;\n",
-      "const Int _212 = 23;\n",
-      "const Int _220 = 24;\n",
-      "const Int _221 = 25;\n",
-      "const Int _222 = 26;\n"
+      "const int _000 = 0;\n",
+      "const int _001 = 1;\n",
+      "const int _002 = 2;\n",
+      "const int _010 = 3;\n",
+      "const int _011 = 4;\n",
+      "const int _012 = 5;\n",
+      "const int _020 = 6;\n",
+      "const int _021 = 7;\n",
+      "const int _022 = 8;\n",
+      "const int _100 = 9;\n",
+      "const int _101 = 10;\n",
+      "const int _102 = 11;\n",
+      "const int _110 = 12;\n",
+      "const int _111 = 13;\n",
+      "const int _112 = 14;\n",
+      "const int _120 = 15;\n",
+      "const int _121 = 16;\n",
+      "const int _122 = 17;\n",
+      "const int _200 = 18;\n",
+      "const int _201 = 19;\n",
+      "const int _202 = 20;\n",
+      "const int _210 = 21;\n",
+      "const int _211 = 22;\n",
+      "const int _212 = 23;\n",
+      "const int _220 = 24;\n",
+      "const int _221 = 25;\n",
+      "const int _222 = 26;\n"
      ]
     }
    ],
    "source": [
     "for a,b,c in it.product(range(0,3), repeat=3):\n",
-    "    print(f'const Int {cmk2str(a,b,c)} = {cmk(a,b,c)};')"
+    "    print(f'const int {cmk2str(a,b,c)} = {cmk(a,b,c)};')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 196,
    "id": "6bd55e02",
    "metadata": {},
    "outputs": [
@@ -134,7 +136,7 @@
        "       f[_rol], f[_roo], f[_ror], f[_rrl], f[_rro], f[_rrr]], dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 197,
    "id": "653ecf90",
    "metadata": {},
    "outputs": [
@@ -161,7 +163,7 @@
        "       m[_210], m[_211], m[_212], m[_220], m[_221], m[_222]], dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 198,
    "id": "e7c1e989",
    "metadata": {},
    "outputs": [
@@ -188,7 +190,7 @@
        "       k[_210], k[_211], k[_212], k[_220], k[_221], k[_222]], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 199,
    "id": "190d4f9e",
    "metadata": {},
    "outputs": [
@@ -281,7 +283,7 @@
        "         0,  0,  1,  0,  1,  0,  0,  0,  1,  0,  1]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 200,
    "id": "dd887afa",
    "metadata": {},
    "outputs": [
@@ -353,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 201,
    "id": "c6626c6f",
    "metadata": {},
    "outputs": [
@@ -470,7 +472,7 @@
        "         0.   ,  0.125,  0.125]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 202,
    "id": "ee907fbd",
    "metadata": {},
    "outputs": [
@@ -545,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 203,
    "id": "add016b4",
    "metadata": {},
    "outputs": [
@@ -585,7 +587,7 @@
        "[u**2*v**2*w**2, -2*u**2*v**2*w, u**2*v**2, -2*u**2*v*w**2, 4*u**2*v*w, -2*u**2*v, u**2*w**2, -2*u**2*w, u**2, -2*u*v**2*w**2, 4*u*v**2*w, -2*u*v**2, 4*u*v*w**2, -8*u*v*w, 4*u*v, -2*u*w**2, 4*u*w, -2*u, v**2*w**2, -2*v**2*w, v**2, -2*v*w**2, 4*v*w, -2*v, w**2, -2*w, 1]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 204,
    "id": "d40ba14b",
    "metadata": {},
    "outputs": [
@@ -665,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 205,
    "id": "b825c6e3",
    "metadata": {},
    "outputs": [
@@ -705,7 +707,7 @@
        "[u**2*v**2*w**2, 2*u**2*v**2*w, u**2*v**2, 2*u**2*v*w**2, 4*u**2*v*w, 2*u**2*v, u**2*w**2, 2*u**2*w, u**2, 2*u*v**2*w**2, 4*u*v**2*w, 2*u*v**2, 4*u*v*w**2, 8*u*v*w, 4*u*v, 2*u*w**2, 4*u*w, 2*u, v**2*w**2, 2*v**2*w, v**2, 2*v*w**2, 4*v*w, 2*v, w**2, 2*w, 1]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 206,
    "id": "1b3f3d98",
    "metadata": {},
    "outputs": [
@@ -766,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 207,
    "id": "fd2ea0ac",
    "metadata": {},
    "outputs": [
@@ -811,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 208,
    "id": "799583aa",
    "metadata": {},
    "outputs": [
